# repositorio-tecnimotos

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Dockerfile  README.md  VERIFICACION_MANUAL.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  openapi.json  pyproject.toml
.doc3/: 00-taxonomia-documental.md  01-contexto-proyecto.md  02-definicion-funcional.md  03-diseno-sistema.md  04-estrategia-pruebas.md  05-trazabilidad-ligera.md  07-criterios-seguridad-ejecutables.md  08-plan-operacion-ejecutable.md  09-criterios-avance-automatico.md
.github/workflows/: ci.yml  e2e-nightly.yml  reset-precio.yml
alembic/: env.py
alembic/versions/: 2c9eda3438e9_initial_schema_33_tablas.py  2d8c8040704c_usuario_persistencia_auth.py  4186070f6f3b_envio_distrito_estructurado.py  438034b83227_dispositivo_confiable_sesion_idle.py  593686985730_categoria_normalizada.py  77e9fe2a97f0_pedido_origen_actor_varchar100.py  82cf135f0f7b_repuesto_destacado.py  993fb3e102f4_repuesto_imagen_url.py  9b4702918fb5_email_cifrado_real_mas_hash.py  b536bf0f31a2_mfa_intento_auditoria.py  c044e39769da_universo_tres_valores_y_anio_nullable.py  cead0a5a36cb_auditoria_transversal_pedido_ot.py  d97fe713a26a_imagen_repuesto_galeria.py  dfa240cff40b_incidente_sistema.py  ee34ddd8e9a1_ot_aceptada_en.py  f4bd9d536a4b_usuario_eliminado_auditoria.py
api/: auth.py  auth_stores.py  dependencies.py  main.py
api/middleware/: database_session.py  metrics_collector.py  rate_limiter.py
api/routes/: admin.py  analitica.py  auth_routes.py  catalogo.py  metrics.py  pedidos.py  privacidad.py  soporte.py  stock.py  taller.py  usuarios.py
design-system/tecnimotos-santi/: MASTER.md
frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(internal)/: layout.tsx
frontend/app/(public)/: layout.tsx
frontend/app/app/: layout.tsx
frontend/app/catalogo/: page.tsx
frontend/app/login/: page.tsx
frontend/app/privacidad/: page.tsx
frontend/app/retencion/: page.tsx
frontend/app/terminos/: page.tsx
frontend/public/: transicion-santi.webm
frontend/public/videos/: transicion-catalogo.webm  transicion-conductor.webm
frontend/src/: middleware.ts
frontend/src/components/: ConfirmActionModal.tsx  EmptyState.tsx  ErrorDisplay.tsx  LoadingIndicator.tsx  PedidoCard.tsx  RegistroForm.tsx  RepuestoCard.tsx  SessionExpiredHandler.tsx  ThemeToggle.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/lib/: api-client.ts  chartColors.ts  precio.ts  types.ts  useCatalogoNavegable.ts  useMiVehiculo.ts  usePedidos.ts  useReservar.ts  useScrollSticky.ts
frontend/src/types/: openapi.d.ts
scripts/: backup_semanal.sh  check_coverage.py  check_dip.py  crear_administrador.py  reencrypt_fernet.py  seed.py  set_password.py  validate_openapi.py  verify_seed.py
src/scripts/: reencrypt_fernet.py
src/shared/domain/: notificacion_port.py  parametros_port.py
src/shared/events/: envelope.py  event_bus.py
src/shared/infrastructure/: database.py  email_sender.py  email_templates.py  fernet.py  logging.py  mfa_auditoria.py  notificacion_adapters.py  parametros_adapters.py  seed_parametros.py  seed_usuarios.py  settings.py
tests/contracts/: test_contrato_catalogo_pedidos.py  test_contrato_catalogo_taller.py  test_contrato_notificacion.py  test_contrato_parametros.py  test_contrato_stock_pedidos.py  test_contrato_stock_taller.py  test_contrato_taller_pedidos.py
tests/e2e/: conftest.py  test_e2e_01_catalogo_reserva.py  test_e2e_02_ot_cobro.py  test_e2e_03_pedido_distrito.py
tests/integration/: conftest.py  conftest_pg.py  test_api_analitica.py  test_api_ep_adm_09_10.py  test_api_ep_usr_01.py  test_auth_admin_endpoints.py  test_bootstrap_superadmin.py  test_dashboards_navigation.py  test_error_handlers.py  test_flujo_autorregistro.py  test_gestion_usuarios_admin.py  test_gestion_usuarios_historial_pg.py  test_metricas_filtros_avanzados.py  test_mfa_correo.py  test_seed_pendiente_habilitacion.py
tests/integration/catalogo/: test_api_catalogo.py  test_api_ep_cat_10.py  test_api_ep_cat_11_12.py  test_api_galeria_imagenes.py  test_api_imagen_unica.py  test_categorias.py  test_destacado.py  test_landing_fallback.py  test_r2_real.py  test_repo_pg_catalogo.py  test_repo_pg_categoria.py
tests/integration/pedidos/: conftest.py  test_api_pedidos.py  test_api_plan_mantenimiento.py  test_auditoria_pedido.py  test_catalogo_adapter_pg.py  test_comprobante_flujo.py  (+1 more)
tests/unit/: test_reencrypt_fernet.py
(+195 files in other folders)
