[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tecnimotos-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115,<0.116",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "asyncpg>=0.29,<0.30",
    "redis>=5.0,<6.0",
    "cryptography>=43.0,<44.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27,<0.28",
    "uvicorn[standard]>=0.30,<0.31",
    "faker>=28.0,<29.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<0.7",
    "mypy>=1.11,<1.12",
    "pytest>=8.3,<8.4",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6.0",
    "pre-commit>=3.8,<3.9",
    "bandit>=1.7,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*", "infrastructure*", "scripts*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "api", "infrastructure", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src", "api"]
branch = true
omit = [
    "src/*/infrastructure/repositories/models/*",
    "src/*/infrastructure/repositories/*_pg.py",
    "tests/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 0

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
