[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tecnimotos-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115,<0.116",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "asyncpg>=0.30,<0.32",
    "redis>=5.0,<6.0",
    "cryptography>=43.0,<44.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "argon2-cffi>=23.1,<24.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27,<0.28",
    "uvicorn[standard]>=0.30,<0.31",
    "faker>=28.0,<29.0",
    "aioboto3>=13.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<0.7",
    "mypy>=1.11,<1.12",
    "pytest>=8.3,<8.4",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6.0",
    "pre-commit>=3.8,<3.9",
    "bandit>=1.7,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*", "infrastructure*", "scripts*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "api", "infrastructure", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # line too long — gestionado por black/format manual
    "UP007",  # Optional[X] → X | None — refactor de estilo, fuera de alcance pre-deploy
    "UP017",  # datetime.timezone.utc → datetime.UTC — código existente usa timezone.utc consistentemente
    "UP035",  # deprecated import — código existente
    "UP038",  # isinstance X|Y union syntax — código existente (check_dip.py)
    "N817",   # CamelCase imported as acronym (Decimal as D) — código existente
    "N801",   # invalid class name (ListaReservaProg_Item) — código existente
    "F401",   # unused import — varios en código existente; limpiar en ciclo separado
    "F841",   # unused variable — código existente
    "F811",   # redefined while unused — código existente
    "F541",   # f-string missing placeholders — código existente
    "I001",   # unsorted imports — código existente; limpiar en ciclo separado
    "E402",   # module-level import not at top — código existente
    "E712",   # true/false comparison — código existente
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src", "api"]
branch = true
omit = [
    "src/*/infrastructure/repositories/models/*",
    "src/*/infrastructure/repositories/*_pg.py",
    "tests/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 0

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
